# ModularComputePipeline

./: .gitignore  README.md  meson.build
.github/workflows/: doxygen.yml
docs/: Doxyfile  _data_handler_8h_source.html  _parser_8h_source.html  annotated.html  annotated_dup.js  class_i_parser-members.html  classes.html  classsample__class-members.html  classsample__class.js  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  index.html  navtreedata.js
docs/html/: _compute_engine_8h_source.html  _integrator_8h_source.html  class_data_handler-members.html  class_data_handler.html  class_i_parser.html  classsample__class.html  dir_03de8c6b3393f2c44a4e173589af68d9.html  dir_03de8c6b3393f2c44a4e173589af68d9.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  navtreeindex0.js  struct_data_container-members.html  struct_data_container.html
docs/latex/: _compute_engine_8h_source.tex  _data_handler_8h_source.tex  _integrator_8h_source.tex  _parser_8h_source.tex  annotated.tex  class_data_handler.tex  class_i_parser.tex  classsample__class.tex  files.tex  refman.tex  struct_data_container.tex
docs/search/: all_2.js  classes_1.js  searchdata.js
doxy_documents/: Doxyfile
doxy_documents/html/: _data_handler_8h_source.html  _integrator_8h_source.html  _parser_8h_source.html  class_action.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  (+1195 more)
include/: DataHandler.h
src/: Integrator.cpp  main.cpp  meson.build
tests/: datahandler_tests.cpp  meson.build
(+726 files in other folders)
